# hpc4ds-autoencoder

./: .gitignore  .gitmodules  CMakeLists.txt  IDEA.md  IMPLEMENTATION_NOTES.md  LICENSE  MODIFICHE.md  Makefile  README.md  build.sh  cpp_enf.conf  cpp_env_with_mpi.conf  data.sh  main.cc  singularity.def  testrun.sh
benchmarks/: CMakeLists.txt  b_communication_many_calls.cc  b_dataloader.cc  b_linear.cc  b_mse.cc  b_relu.cc  b_sgd.cc  b_sigmoid.cc  b_train.cc  benchmark0.cc  benchmark1.cc
data/: process_svhn.py  requirements.txt
report/: main.typ  template.typ
scripts/: build.sh  build_local.sh  comm_bench.sh  data.sh  hybrid.sh  launch_comm_bench.sh  launch_hybrid.sh  launch_mpi.sh  micro_bench.sh  mpi.sh  omp.sh  run_comm_bench.pbs  run_hybrid.pbs  run_mpi.pbs  sequential.sh
src/: CMakeLists.txt  prova.cc  prova.hh
src/data/: CMakeLists.txt  dataset.cc  dataset.hh
src/model/: CMakeLists.txt  model.hh
src/nn/: CMakeLists.txt  linear.cc  linear.hh  mse.hh  relu.cc  relu.hh  sigmoid.hh
src/optim/: CMakeLists.txt  sgd.hh
src/utils/: CMakeLists.txt  common.cc  common.hh  loops.cc  loops.hh  rand.cc  rand.hh  worker.cc  worker.hh
tests/: CMakeLists.txt  autoencoder_tests.cc  dataset_tests.cc  linear_layer_tests.cc  model_tests.cc  mse_tests.cc  random_split_tests.cc  relu_tests.cc  sgd_tests.cc  sigmoid_tests.cc
